--- a/app/src/main/res/layout/fragment_door_lock.xml
+++ b/app/src/main/res/layout/fragment_door_lock.xml
@@ -83,18 +83,29 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-        <com.ethanco.lib.PasswordInput
-            app:layout_constraintTop_toTopOf="parent"
+        <TextView
+            app:layout_constraintBottom_toTopOf="@id/doorlock_passwordInput"
+            app:layout_constraintTop_toBottomOf="@id/doorlock_cardView"
+            android:id="@+id/doorlock_password"
+            android:textColor="@color/main_color"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="@color/main_color_primary_variant"
+            android:textColor="@color/white"
+            android:text="点击修改门锁密码"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/retangle_bg"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/doorlock_passwordInput_first"
+            android:id="@+id/doorlock_passwordInput"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            app:boxCount="4"
-            android:layout_marginHorizontal="30dp"
-            app:focusedColor="@color/main_color_primary_variant"
-            app:notFocusedColor="@color/second_color" />
+            android:layout_marginHorizontal="30dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
