--- a/app/src/main/res/layout/fragment_exhibit.xml
+++ b/app/src/main/res/layout/fragment_exhibit.xml
@@ -18,21 +18,22 @@
         tools:context=".ui.home.exhibit.ExhibitFragment"
         android:focusable="true">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/exhibit_toolbar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/white"
+            android:elevation="@dimen/ui_elevation_height"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationContentDescription="返回上一级"
+            app:navigationIcon="@drawable/ic_outline_navigate_before_24"
             app:navigationIconTint="@color/main_color_primary_secondary"
             app:title="xxx device"
             app:titleCentered="true"
-            android:elevation="@dimen/ui_elevation_height"
-            app:navigationContentDescription="返回上一级"
-            app:navigationIcon="@drawable/ic_outline_navigate_before_24"
-            app:titleTextColor="@color/main_color_primary_secondary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            app:titleTextColor="@color/main_color_primary_secondary" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/exhibit_recyclerview"
