--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,6 +52,17 @@
                         app:strokeColor="@color/white"
                         app:strokeWidth="1dp" />
 
+                    <TextView
+                        android:textColor="@color/icon_color"
+                        android:id="@+id/home_tips"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginEnd="10dp"
+
+                        app:layout_constraintEnd_toStartOf="@id/home_notification"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
                     <ImageButton
                         android:id="@+id/home_notification"
                         android:layout_width="40dp"
