--- a/app/src/main/res/layout/fragment_led.xml
+++ b/app/src/main/res/layout/fragment_led.xml
@@ -85,33 +85,44 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/led"
-            android:layout_width="80dp"
-            android:layout_marginBottom="80dp"
-            app:tint="@color/main_color_primary_variant"
+            android:layout_width="100dp"
+            android:layout_marginBottom="100dp"
+            app:tint="@android:color/transparent"
             android:src="@drawable/ic_twotone_wb_incandescent_24"
-            app:layout_constraintBottom_toTopOf="@id/bright_picker"
+            app:layout_constraintBottom_toTopOf="@id/color_cardView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="80dp"/>
 
-        <com.github.gzuliyujiang.colorpicker.BrightnessGradientView
-            android:id="@+id/bright_picker"
+        <com.google.android.material.card.MaterialCardView
+            app:cardCornerRadius="30dp"
+            android:id="@+id/color_cardView"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginHorizontal="20dp"
             app:layout_constraintTop_toBottomOf="@id/led_cardView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <com.github.gzuliyujiang.colorpicker.ColorGradientView
-            app:layout_constraintTop_toBottomOf="@id/bright_picker"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="20dp"
-            android:id="@+id/color_picker"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.github.gzuliyujiang.colorpicker.BrightnessGradientView
+                    android:id="@+id/bright_picker"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp" />
+
+                <com.github.gzuliyujiang.colorpicker.ColorGradientView
+                    android:id="@+id/color_picker"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"/>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <androidx.appcompat.widget.AppCompatButton
             android:text="确定"
@@ -119,7 +130,7 @@
             android:layout_marginTop="20dp"
             android:textSize="18sp"
             android:background="@drawable/retangle_bg"
-            app:layout_constraintTop_toBottomOf="@id/color_picker"
+            app:layout_constraintTop_toBottomOf="@id/color_cardView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/color_button"
