--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,7 +123,7 @@
                             android:padding="5dp">
 
                             <TextView
-                                android:id="@+id/home_cardView_title"
+                                android:id="@+id/home_cardView_tem"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
@@ -153,21 +153,47 @@
 
                         </RelativeLayout>
 
-                        <RelativeLayout
+                        <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:orientation="horizontal"
                             android:layout_marginHorizontal="15dp"
-                            android:layout_marginBottom="10dp"
-                            android:paddingStart="15dp">
+                            android:layout_marginBottom="10dp">
 
-                            <ImageButton
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:background="@drawable/circle_bg"
-                                android:backgroundTint="@color/main_color_primary_variant">
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:gravity="center"
+                                android:id="@+id/home_CardView_quality"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textSize="16sp"
+                                android:layout_height="wrap_content">
+                            </androidx.appcompat.widget.AppCompatTextView>
 
-                            </ImageButton>
-                        </RelativeLayout>
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:gravity="center"
+                                android:id="@+id/home_CardView_humidity"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textSize="16sp"
+                                android:layout_height="wrap_content">
+                            </androidx.appcompat.widget.AppCompatTextView>
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/home_CardView_visibility"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:layout_gravity="center"
+                                android:textSize="16sp"
+                                android:gravity="center"
+                                android:layout_height="wrap_content">
+                            </androidx.appcompat.widget.AppCompatTextView>
+
+                        </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                 </androidx.cardview.widget.CardView>
