--- a/app/src/main/res/layout/fragment_wisdom.xml
+++ b/app/src/main/res/layout/fragment_wisdom.xml
@@ -34,6 +34,9 @@
             android:layout_height="wrap_content" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_goneMarginTop="1dp"
+            android:elevation="@dimen/ui_elevation_height"
+            android:background="@color/white"
             android:id="@+id/wisdom_indoor"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
@@ -89,6 +92,9 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_goneMarginTop="1dp"
+            android:elevation="@dimen/ui_elevation_height"
+            android:background="@color/white"
             android:id="@+id/wisdom_outdoor"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -142,6 +148,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_goneMarginTop="1dp"
+            android:elevation="@dimen/ui_elevation_height"
+            android:background="@color/white"
             android:id="@+id/wisdom_sleep"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -195,6 +204,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_goneMarginTop="1dp"
+            android:elevation="@dimen/ui_elevation_height"
+            android:background="@color/white"
             android:id="@+id/wisdom_random"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -265,9 +277,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:paddingTop="20dp"
             android:id="@+id/wisdom_random_list"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
             android:visibility="gone"
+            app:spanCount="2"
+            android:paddingHorizontal="15dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/wisdom_random"
             android:layout_width="match_parent"
